--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "gsap": "^3.13.0",
+    "install": "^0.13.0",
     "next": "16.0.1",
     "next-font": "^1.2.0",
     "react": "19.2.0",
